# deidentification-processor

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  CODE_REVIEW.md  PLAN.md  README.md  deid-go-spec.md  index.html  interview.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
deid/: __init__.py  auth.py  cli.py  config.py  deidentifier.py  preprocessor.py  reidentifier.py  sheets.py
rules/: contracts.yaml  customers.yaml  invoices.yaml  payments.yaml  product_sales.yaml
schemas/: contracts.yaml  customers.yaml  invoices.yaml  payments.yaml  product_sales.yaml
src/: App.tsx
src/components/: FileDropZone.tsx  Header.tsx  LocationSetup.tsx  ProcessPage.tsx  RulesEditor.tsx  SettingsPage.tsx
src/config/: hooks.ts  storage.ts
src/core/: deidentifier.ts  enricher.ts  hasher.ts  normalizer.ts  preprocessor.ts  processor.ts  schemas.ts  types.ts
